Correction of stuff I had to corrects when I failed to save

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- We created an empty HTML div. Note that there is no content inside. -->
     <div id="empty-div">
       <label for="hangWord">Hangman, type your word of twelve or fewer letters here:</label><br>
-        <input type="text" name="hangWord" id="hangWord" value= "Hangman">
+        <input type="text" name="hangWord" id="hangWord" value = "Hangman">
         <input type="submit" id = "wordSubmit" name="wordSubmit"><br><br>
       <label for="playerGuess">Condemned prisoner, type your letter here!</label><br>
         <input type="text" name="playerGuess" id="playerGuess" value="a">
@@ -21,7 +21,7 @@
     </div>
         <span id = "trueLetters">&nbsp;</span><br><br>
     <span id="falseLetters">&nbsp;</span><br><br>
-    
+    <span id="wrongGuess">&nbsp;</span><br><br>    
   </body>
 </html>
 <!-- git ecample code -->
