--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="Hangman.js"></script>
+  <script src="assets/javascript/Hangman.js"></script>
+  <link rel="stylesheet" href= "assets/css/style.css">
  
   <title>Basic JavaScript Dump</title>
 </head>
