--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <div id= "letters">
         <span id = "trueLetters">&nbsp;</span><br><br>
     <span id="falseLetters">&nbsp;</span><br><br>
-    <span id="wrongGuess">&nbsp;</span><br><br> 
+    <span id="playerWins">&nbsp;</span><br><br> 
+    <span id="wrongGuess">&nbsp;</span><br><br>
+    
   </div> 
   </div>  
   </body>
